# user-api-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile.backend  MONITORING.md  PRODUCTION_CHECKLIST.md  README.md  TESTING_GUIDE.md  debug_import.py  docker-compose.yml  main.py  pet_flow.mermaid  pyproject.toml
.github/workflows/: ci.yml
backend/: .langchain.db  cli.py  main.py
backend/agent/: graph.py  nodes.py  state.py
backend/api/: endpoints.py  schemas.py  sessions.py
backend/core/: cache.py  diversification.py  exceptions.py  expansion.py  filtering.py  hybrid.py  llm_client.py  resilience.py  security.py  sessions.py  text_splitter.py  vector_store.py
backend/utils/: postman.py  sanitization.py  timing.py  validation.py
data/: sessions.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: file-upload.tsx  mermaid-diagram.tsx  swagger-viewer.tsx
scripts/: benchmark_performance.py  demo_api.py  demo_diagrams.py  demo_filtering.py  demo_parser.py  demo_sessions.py  deploy.ps1  deploy.sh  download_dataset.py  download_test_data.py  ingest.py  reset_db.py  setup_ollama.py  test_backend.py  test_scraper.py  test_scraper_v2.py
tests/: conftest.py  test_api_advanced.py  test_api_endpoints.py  test_caching.py  test_chat_flow.py  test_cli.py  test_diagrams.py  test_diversification.py  test_docker_config.py  test_filtering.py  test_hybrid_search.py  test_parsers.py  test_postman.py  test_reproduction.py  test_resilience.py  test_retrieval.py  test_scraper_logic.py  test_security.py  test_sessions.py  test_upload_flow.py  test_vector_store.py
tests/data/: petstore.json  petstore_simple.json
ui/: app.py
(+10 files in other folders)
