[project]
name = "api-assistant-antigravity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "cachetools>=6.2.4",
    "chainlit>=2.9.4",
    "chromadb>=1.4.0",
    "duckduckgo-search<7",
    "fastapi>=0.127.0",
    "kaggle>=1.8.3",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "numpy>=2.4.0",
    "pypdf>=6.5.0",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "tenacity>=9.1.2",
    "termcolor>=3.2.0",
    "typer>=0.21.0",
    "uvicorn>=0.40.0",
]
